testing homepage api

--- a/src/main/resources/.env
+++ b/src/main/resources/.env
@@ -1,4 +1,4 @@
-MONGO_DATABASE="item"
+MONGO_DATABASE="restaurant"
 MONGO_USER="test"
 MONGO_PASSWORD="testpassword"
-MONGO_CLUSTER="cluster0.o3rx1jv.mongodb.net"
+MONGO_CLUSTER="cluster0.uklwdrc.mongodb.net"
