--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=restaurant
-spring.data.mongodb.database=item
-spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@${MONGO_CLUSTER}
+spring.data.mongodb.database=restaurant
+spring.data.mongodb.uri=mongodb+srv://test:testpassword@cluster0.uklwdrc.mongodb.net
